--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --coverage -u",
     "serve:ssr:cakap": "node dist/cakap/server/server.mjs"
   },
   "private": true,
@@ -30,11 +30,15 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.3",
+    "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "3",
+    "ts-jest": "^29.2.6",
     "typescript": "~5.7.2"
   }
 }
-
