--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest --coverage -u",
-    "serve:ssr:cakap": "node dist/cakap/server/server.mjs"
+    "serve:ssr:cakap": "node dist/cakap/server/server.mjs",
+    "prepare": "husky",
+    "commit": "cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
   },
   "private": true,
   "dependencies": {
@@ -33,10 +40,16 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.20",
+    "commitizen": "^4.3.1",
+    "git-cz": "^4.9.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.3",
     "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "pretty-quick": "^4.1.1",
     "tailwindcss": "3",
     "ts-jest": "^29.2.6",
     "typescript": "~5.7.2"
