--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --coverage -u",
     "serve:ssr:cakap": "node dist/cakap/server/server.mjs",
     "prepare": "husky",
-    "commit": "cz"
+    "commit": "cz",
+    "lint": "ng lint"
   },
   "config": {
     "commitizen": {
@@ -39,8 +40,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
+    "angular-eslint": "19.2.0",
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.1",
+    "eslint": "^9.21.0",
     "git-cz": "^4.9.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
@@ -52,6 +55,7 @@
     "pretty-quick": "^4.1.1",
     "tailwindcss": "3",
     "ts-jest": "^29.2.6",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.25.0"
   }
 }
