--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@ngrx/signals": "19.0.1",
+    "@ngrx/store": "19.0.1",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -36,6 +39,7 @@
     "@angular-devkit/build-angular": "^19.2.1",
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
+    "@angular/localize": "19.2.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
@@ -58,4 +62,3 @@
     "typescript-eslint": "8.25.0"
   }
 }
-
